--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="legal_library_audiokit">AUDIOKIT</string>
 
     <string name="about_us_title">About Us</string>
-    <string name="about_us_text">On August 21, 2017, millions of people will view a total solar eclipse as it passes through the United States. However, for the visually impaired, or others who are unable to see the clipse with their own eyes, the Eclipse Soundscapes Project delivers a multisensory experience of this exciting celestial event. The project, from NASA\'s Heliophysics Education Consortium, will include illustrated audio descriptions of the eclipse in real time, recordings of the changing environmental sounds during the eclipse, and an interactive "rumble map" app that will allow users to visualize the eclipse through touch.</string>
+    <string name="about_us_text">From the Smithsonian Astrophysics Observatory and NASA\'s Heliophysics Education Consortium, The Eclipse Soundscapes Project uses sound to create a multisensory experience of astronomical events such as eclipses. With this app, and an additional citizen science project to record changing environmental sounds during eclipses, Eclipse Soundscapes aims to engage all learners with astrophysics, including people who are blind or visually impaired. For more information, visit eclipsesoundscapes.org.</string>
     <string name="more_info_title">More Information</string>
 
     <!-- Eclipse Center -->
@@ -79,13 +79,24 @@
     <string name="prevImgButton">show previous eclipse image</string>
 
     <!-- rumble map interaction -->
+    <string name="instructions_button">Instructions</string>
+    <string name="rumble_map_instructions">To use the Rumble Map, touch your screen with only one finger. The map will produce audio tones and vibrations depending on how much light is underneath that particular spot. For best results, drag your finger across the touchscreen slowly. As you move your finger onto the bright sections of the Sun, your phone will vibrate more and produce a sharper, more pronounced audio tone. As you move your finger into the dark spaces blocked by the Moon’s disk, the vibration will diminish as the audio tone darkens and disappears. At times, you may hear a metronome-like ticking sound: that means you have entered an area of total darkness, either on the face of the Moon, or in the dark space outside the sphere of the Sun. By paying close attention to the audio tones and the strength of your phone’s vibration, you can learn how much sunlight is visible at each stage of the eclipse, and even explore some of the fascinating features of the Sun’s corona such as Bailey’s Beads, Helmet Streamers, Prominences, and the Diamond Ring effect. If a specific section of an image interests you and you want to return to it later, hold down your finger in one place until you hear a “blip” noise. You’ve created a marker! Next time your finger passes over this point, you will hear the “blip” again so you can continue to explore that area.
+</string>
     <string name="rumble_map_inactive">Rumble map inactive</string>
     <string name="rumble_map_running">Rumble map running, double tap to turn off</string>
 
 
     <!-- Walkthrough -->
     <string name="walkthrough_welcome">Welcome</string>
-    <string name="walkthrough_welcome_text">Thank you for downloading the Eclipse Soundscapes app. We hope to create an engaging multi-sensory experience of the August 21, 2017 eclipse for all participants, including people who are blind or visually impaired. Inside, you will find a countdown to the eclipse in your area, with illustrative audio descriptions of the eclipse in real time, provided by the National Center for Accessible Media.</string>
+    <string name="title_rumble_map">Rumble Map</string>
+    <string name="title_audio_descriptions">Audio Descriptions</string>
+    <string name="walkthrough_skip_button">Skip</string>
+    <string name="walkthrough_title_access">Please allow location access</string>
+    <string name="walkthrough_ask_later">Ask Later</string>
+    <string name="walkthrough_welcome_text">Thank you for downloading the Eclipse Soundscapes app, a multi-sensory experience for people of all learning styles to engage with astronomical events, including total solar eclipses. Inside this app, you will find countdowns to major astronomical events in your area, and real time narrations of those events with illustrative audio descriptions provided by the National Center for Accessible Media. You can also explore the cosmos with high quality photos, educational information, and accessible learning tools.</string>
+    <string name="walkthrough_rumble_map_text">Our Rumble Map tool is designed for you to hear and feel astronomical phenomena, such as eclipses, using the touchscreen and the speakers on your smartphone. For example: the Rumble Map will display photos of the Moon passing in front of the Sun during the most engaging and educational moments of an eclipse. When you touch the image on the screen, the app will read the grayscale value of a pixel underneath your finger, and play an audio tone which will vibrate your phone with a strength relative to the brightness of that section. As you move your finger onto the bright sections of the Sun, your phone will vibrate more. As you move your finger into the dark spaces blocked by the Moon’s disk, the vibration will diminish and disappear. By paying close attention to the audio tones and the strength of your phone\'s vibration, you can learn how much sunlight is visible at each stage of the eclipse, and explore some of the fascinating features of the Sun\'s corona.</string>
+    <string name="walkthrough_eclipse_center">The Eclipse Center is your go-to destination for learning about eclipses in your area so you can discover them as they happen. When you open the Eclipse Center, it will ask to pinpoint your geographic location. Once you accept, you will find a countdown to the next eclipse, information on whether you will experience a total or a partial solar eclipse in your area, and the exact start time, peak time, and end time of the eclipse. </string>
+    <string name="walkthrough_audio_description">When it is time for the next eclipse to start, you will receive a push notification to open Eclipse Soundscapes. The app will then guide you through the main event with illustrative audio descriptions of an eclipse\'s most important moments. These audio descriptions, provided by the National Center for Accessible Media, are explanations of photos developed with specialized language to help people who are blind and visually impaired engage with an eclipse. After each audio description ends, you will have the option to either hear more educational information or explore that feature of an eclipse using the Rumble Map.</string>
 
     <!-- Dialog -->
     <string name="closeDialogButton">Close Dialog</string>
@@ -101,14 +112,12 @@
     <string name="permission_rationale_location">Access to the location service is required to provide Eclipse information based on your location.</string>
     <string name="location_permission_denied">Permission to access the device\'s location has been denied. Please grant access by enabling the location permission from the System Settings &gt; Apps &gt; \'Eclipse Soundscapes\'.</string>
 
-
-    <array name="aboutOptions">
+    <array name="listOptions">
+        <item name="item_rumble_map">How to use the Rumble Map</item>
         <item name="item_team">Our team</item>
         <item name="item_partners">Our partners</item>
-    </array>
-
-    <array name="moreOptions">
-        <item name="item_instructions">How to use this app</item>
+        <item name="item_future_eclipses">Future Eclipses</item>
+        <item name="item_instructions">WalkThrough</item>
         <item name="item_settings">Settings</item>
         <item name="item_legal">Legal</item>
     </array>
